--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -21,13 +21,22 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" /> -->
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" type="text/css" href="lib/jquery-mobile/jquery.mobile-1.2.0.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
         <script>
             var callingNumber = "";
             var myFriends = [];
+
+            //constructor
+            var MyPhoneNumberPlugin = {
+                getMyPhoneNumber: function(onSuccess, onError) {
+                    console.log("at getMyPhoneNumber");
+                    return PhoneGap.exec(onSuccess, onError, "MyPhoneNumberPlugin", "getMyPhoneNumber", []);
+                }
+            };
         </script>
 
     </head>
@@ -65,7 +74,17 @@
                 <li><a href="#">Ferrari</a></li>
             </ul>
         </div>
+    </div>
 
+    <div data-role="popup" id="popupMyPhone" data-theme="a" class="ui-corner-all">
+        <form>
+            <div style="padding:10px 20px;">
+                <h3>Please insert your phone number</h3>
+                <label for="myphoneinput" class="ui-hidden-accessible">Phone (including prefix +39):</label>
+                <input type="tel" name="user" id="myphoneinput" value="" placeholder="username" data-theme="a" />
+                <button type="submit" data-theme="b" id="setMyIp">Sign in</button>
+            </div>
+        </form>
     </div>
 
     <!--
