--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -21,8 +21,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
-        <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" /> -->
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="initial-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="lib/jquery-mobile/jquery.mobile-1.2.0.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
@@ -42,7 +41,7 @@
     </head>
     <body>
 
-    <div data-role="page" id="index">
+    <div data-role="page" id="index" style="background: #000000 url('img/risunki-yumor-7195.jpg') repeat;">
 
         <div data-role="header">
             <h1>My Title</h1>
