--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -29,6 +29,7 @@
             var callingNumber = "";
             var myFriends = [];
             var savedCO2 = 0;
+            var currentFindRequest = "";
 
             //constructor
             var MyPhoneNumberPlugin = {
@@ -53,8 +54,6 @@
         <div data-role="header">
             <h1>PoolMeUp!</h1>
         </div>
-
-        <img src="lapappa.png" onerror="this.src='img/noUserImg.png'" />
 
         <div data-role="content">
             <p><a href="#find" data-role="button">Find a ride!</a></p>
